--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
 <style>
 html,body{
-  margin:0;
-  padding:0;
-  width:100%;
-  height:100%;
+  margin:0;padding:0;width:100%;height:100%;
   overflow:hidden;
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
   background:radial-gradient(circle at top,#2b0b4f,#05010a);
@@ -18,83 +15,58 @@ html,body{
 }
 body::before{
   content:"";
-  position:fixed;
-  inset:0;
+  position:fixed;inset:0;
   background-image:
     radial-gradient(1px 1px at 20% 30%,#fff,transparent),
     radial-gradient(1px 1px at 70% 60%,#fff,transparent),
     radial-gradient(1px 1px at 40% 80%,#fff,transparent);
-  opacity:.18;
-  pointer-events:none;
+  opacity:.18;pointer-events:none;
 }
 
 /* HUD */
 #hud{
-  position:fixed;
-  top:14px;
-  left:14px;
-  color:white;
-  font-size:18px;
-  z-index:20;
+  position:fixed;top:14px;left:14px;
+  color:white;font-size:18px;z-index:20;
 }
-#lives{margin-left:6px}
 #level{display:block;font-size:14px;opacity:.8}
 
 /* Hikâye */
 #storyLine{
-  position:fixed;
-  top:60px;
-  left:50%;
+  position:fixed;top:60px;left:50%;
   transform:translateX(-50%);
-  color:#ffd1e8;
-  font-size:18px;
+  color:#ffd1e8;font-size:18px;
   text-shadow:0 0 12px rgba(255,150,200,.8);
-  opacity:0;
-  z-index:25;
-  transition:.5s;
+  opacity:0;transition:.5s;z-index:25;
 }
 #storyLine.show{opacity:1}
 
 /* Panel */
 #panel{
-  position:fixed;
-  bottom:80px;
-  left:50%;
+  position:fixed;bottom:80px;left:50%;
   transform:translateX(-50%);
-  width:60px;
-  height:14px;
-  border-radius:20px;
+  width:60px;height:14px;border-radius:20px;
   background:linear-gradient(90deg,#ff6aa2,#ff2f7a);
   box-shadow:0 0 30px rgba(255,80,180,.9);
   z-index:15;
 }
 
-/* Harf kutuları */
+/* Harf Kutuları */
 #letterBoxes{
-  position:fixed;
-  bottom:20px;
-  left:50%;
+  position:fixed;bottom:20px;left:50%;
   transform:translateX(-50%);
-  display:flex;
-  gap:8px;
-  z-index:16;
+  display:flex;gap:8px;z-index:16;
 }
 .box{
-  width:30px;
-  height:30px;
-  border-radius:8px;
+  width:30px;height:30px;border-radius:8px;
   background:rgba(255,255,255,.12);
   border:1px solid rgba(255,255,255,.5);
-  color:white;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:bold;
-  font-size:15px;
+  color:white;display:flex;
+  align-items:center;justify-content:center;
+  font-weight:bold;font-size:15px;
 }
 .box.filled{
   background:rgba(255,255,255,.3);
-  box-shadow:0 0 12px rgba(255,200,220,.9);
+  box-shadow:0 0 14px rgba(255,200,220,.9);
 }
 
 /* Objeler */
@@ -106,54 +78,39 @@ body::before{
   box-shadow:0 0 12px gold;
 }
 .heart{
-  width:22px;height:22px;
-  background:#ff4d6d;
+  width:22px;height:22px;background:#ff4d6d;
   transform:rotate(-45deg);
   border-radius:50% 50% 0 0;
 }
 .heart::before,.heart::after{
-  content:"";
-  position:absolute;
-  width:22px;height:22px;
-  background:#ff4d6d;
+  content:"";position:absolute;
+  width:22px;height:22px;background:#ff4d6d;
   border-radius:50%;
 }
 .heart::before{top:-11px}
 .heart::after{left:11px}
 .meteor{
-  width:16px;height:16px;
-  border-radius:50%;
+  width:16px;height:16px;border-radius:50%;
   background:radial-gradient(circle,#9e9e9e,#424242);
 }
 .letter{
-  font-size:22px;
-  font-weight:bold;
-  color:#ffd54f;
-  text-shadow:0 0 14px gold;
+  font-size:22px;font-weight:bold;
+  color:#ffd54f;text-shadow:0 0 14px gold;
 }
 
-/* Oyun sonu */
+/* Oyun Sonu */
 #over{
-  display:none;
-  position:fixed;
-  inset:0;
+  display:none;position:fixed;inset:0;
   background:rgba(0,0,0,.8);
-  color:white;
-  z-index:30;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
-  text-align:center;
+  color:white;z-index:30;
+  align-items:center;justify-content:center;
+  flex-direction:column;text-align:center;
 }
 #over h1{font-size:32px;margin-bottom:10px}
 #over button{
-  margin-top:15px;
-  padding:10px 22px;
-  border:none;
-  border-radius:14px;
-  background:#ff4d6d;
-  color:white;
-  font-size:18px;
+  padding:10px 22px;border:none;
+  border-radius:14px;background:#ff4d6d;
+  color:white;font-size:18px;
 }
 </style>
 </head>
@@ -176,13 +133,17 @@ body::before{
 </div>
 
 <script>
-/* ====== TEMEL ====== */
+/* ===== TEMEL ===== */
 let score=0,lives=3,level=1,running=true;
-let speedFactor=1,secret=false;
+let speedFactor=1;
 
 const letters=["Y","I","L","D","I","Z"];
-const filled=[],active=[],items=[];
+const filledCounts={Y:0,I:0,L:0,D:0,Z:0};
+const maxCounts={Y:1,I:2,L:1,D:1,Z:1};
+const activeLetters=[];
+const items=[];
 
+/* Elementler */
 const panel=document.getElementById("panel");
 const scoreEl=document.getElementById("score");
 const livesEl=document.getElementById("lives");
@@ -192,7 +153,7 @@ const boxes=document.getElementById("letterBoxes");
 const over=document.getElementById("over");
 const endText=document.getElementById("endText");
 
-/* Kutular */
+/* Kutular Y I L D I Z kilitli */
 letters.forEach(l=>{
   const b=document.createElement("div");
   b.className="box";
@@ -219,7 +180,7 @@ function collide(a,b){return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a
 const storyTexts=[
   "Yıldız gibi parlıyorsun ✨",
   "Kalbim seni seçti 💖",
-  "Her parça sana ait",
+  "Her harf sana ait",
   "Bu bir oyun değil…",
   "Bu biziz ⭐"
 ];
@@ -232,11 +193,13 @@ function showStory(){
 /* Spawn */
 function spawn(type){
   if(!running) return;
+
   if(type==="letter"){
-    const pool=letters.filter(l=>filled.filter(x=>x===l).length<letters.filter(x=>x===l).length&&!active.includes(l));
+    const pool=letters.filter(l=>filledCounts[l]<maxCounts[l] && !activeLetters.includes(l));
     if(!pool.length) return;
     const l=pool[Math.floor(Math.random()*pool.length)];
-    active.push(l);
+    activeLetters.push(l);
+
     const el=document.createElement("div");
     el.className="item letter";
     el.textContent=l;
@@ -248,6 +211,7 @@ function spawn(type){
     items.push({el,type});
     return;
   }
+
   const el=document.createElement("div");
   el.className="item "+type;
   el.y=-60;
@@ -262,6 +226,7 @@ function spawn(type){
 function loop(){
   if(!running) return;
   const pRect=panel.getBoundingClientRect();
+
   for(let i=items.length-1;i>=0;i--){
     const o=items[i];
     o.el.y+=(o.el.speed||2);
@@ -272,22 +237,32 @@ function loop(){
       if(o.type==="star") score+=10;
       if(o.type==="heart" && lives<3) lives++;
       if(o.type==="meteor") lives--;
+
       if(o.type==="letter"){
-        filled.push(o.el.letter);
-        active.splice(active.indexOf(o.el.letter),1);
-        const box=[...boxes.children].find(b=>b.textContent==="");
-        if(box){box.textContent=o.el.letter;box.classList.add("filled")}
-        if(filled.length===letters.length){
+        const l=o.el.letter;
+        filledCounts[l]++;
+        activeLetters.splice(activeLetters.indexOf(l),1);
+
+        const box=[...boxes.children].find(b=>b.dataset.letter===l && b.textContent==="");
+        if(box){
+          box.textContent=l;
+          box.classList.add("filled");
+        }
+
+        const totalFilled=Object.values(filledCounts).reduce((a,b)=>a+b,0);
+        if(totalFilled===6){
           running=false;
           endText.textContent="YILDIZ ⭐\nKalbim hep sende";
           over.style.display="flex";
           return;
         }
       }
+
       scoreEl.textContent=score;
       updateLives();
       o.el.remove();
       items.splice(i,1);
+
       if(lives<=0){
         running=false;
         endText.textContent="Kaybettin";
@@ -295,8 +270,11 @@ function loop(){
         return;
       }
     }
+
     if(o.el.y>innerHeight+60){
-      if(o.type==="letter") active.splice(active.indexOf(o.el.letter),1);
+      if(o.type==="letter"){
+        activeLetters.splice(activeLetters.indexOf(o.el.letter),1);
+      }
       o.el.remove();
       items.splice(i,1);
     }
@@ -304,7 +282,7 @@ function loop(){
   requestAnimationFrame(loop);
 }
 
-/* Level & gizli mod */
+/* Level */
 setInterval(()=>{
   const newLevel=Math.floor(score/100)+1;
   if(newLevel!==level){
@@ -312,7 +290,6 @@ setInterval(()=>{
     levelEl.textContent="Level: "+level;
     speedFactor+=0.2;
     showStory();
-    if(level===5) secret=true;
   }
 },500);
 
